# python-package-template

./: .coveragerc  .flake8  .gitignore  LICENSE  Pipfile  README.md  bandit.yml  pyproject.toml  tox.ini
src/package/: __init__.py  _version.py
