[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "package"
authors = [{name = "Richard Angell", email = "richardangell37@gmail.com"}]
dynamic = ["version", "description"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python=">=3.10"
dependencies=[]

[project.optional-dependencies]
test = [
    "pre-commit==2.19.0",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "tox==3.25.0"
]

[project.urls]
Home = "https://github.com/richardangell/package"
